--- a/backend/bookexchange/src/main/resources/application.properties
+++ b/backend/bookexchange/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8081
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bookexchange
 spring.datasource.username=root
-spring.datasource.password=Aditya@030506
+spring.datasource.password=@Lphanite2025
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate
